# py-poetry

./: .gitignore  README.md  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
src/api/: pyproject.toml
src/app/: __init__.py  pyproject.toml
tests/: pyproject.toml  test_api.py  test_app.py
