[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Tyler Kendrick <contact.tylerkendrick@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
pydantic_settings = "^2.3.4"
fastapi = "^0.112.0"

[tool.poetry.group.dev.dependencies]
env = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"