[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tyler Kendrick <contact.tylerkendrick@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-extras = "^0.4.3"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
env = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
